--- a/app/src/main/res/layout/inc_player_container.xml
+++ b/app/src/main/res/layout/inc_player_container.xml
@@ -24,7 +24,7 @@
         android:layout_gravity="center"
         android:background="@drawable/background_protection_oval"
         android:visibility="visible"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/image_background_protection_oval" />
 
 
     <ProgressBar
