--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="4dp">
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp">
 
             <View
                 android:id="@+id/view_depth"
