--- a/app/src/main/res/layout/playback_control_view.xml
+++ b/app/src/main/res/layout/playback_control_view.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@drawable/background_protection_oval"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/image_background_protection_oval" />
 
         <TextView
             android:id="@+id/exo_info"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@drawable/background_protection_oval"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/image_background_protection_oval" />
 
 
     </LinearLayout>
