--- a/app/src/main/res/layout/activity_media_youtube.xml
+++ b/app/src/main/res/layout/activity_media_youtube.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Base.ThemeOverlay.AppCompat.Dark"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
