--- a/app/src/main/res/layout/list_subreddit_selected.xml
+++ b/app/src/main/res/layout/list_subreddit_selected.xml
@@ -117,7 +117,7 @@
             android:paddingBottom="@dimen/list_padding_vertical_author"
             android:paddingEnd="@dimen/list_padding_horizontal_author"
             android:paddingStart="@dimen/list_padding_horizontal_author"
-            android:textColor="@color/textColorSecondary"
+            android:textColor="?android:attr/textColorSecondary"
             android:textStyle="italic" />
 
         <TextView
@@ -132,7 +132,7 @@
             android:paddingBottom="@dimen/list_padding_vertical_author"
             android:paddingEnd="@dimen/list_padding_horizontal_author"
             android:paddingStart="@dimen/list_padding_horizontal_author"
-            android:textColor="@color/textColorSecondary"
+            android:textColor="?android:attr/textColorSecondary"
             android:textStyle="italic" />
 
     </LinearLayout>
