--- a/app/src/main/res/menu/activity_base_drawer_main.xml
+++ b/app/src/main/res/menu/activity_base_drawer_main.xml
@@ -2,7 +2,9 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/general_drawer_menu"
+        android:checkableBehavior="single">
 
         <item
             android:id="@+id/nav_home"
@@ -19,7 +21,9 @@
 
     </group>
 
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/secondary_drawer_menu"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_mode_subscriptions"
             android:title="@string/title_menu_managesubs" />
@@ -32,7 +36,7 @@
 
     </group>
 
-    <group>
+    <group android:id="@+id/subs_drawer_menu">
         <item
             android:id="@+id/nav_mode_subs"
             android:title="@string/title_menu_subscriptions" />
