--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@color/textColorPrimary</item>
         <item name="android:textColorSecondary">@color/textColorSecondary</item>
-        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 
@@ -33,9 +33,13 @@
         <item name="colorPrimary">@color/grey_600</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/light_green_A700</item>
+        <item name="android:colorBackground">@color/grey_600</item>
+        <item name="android:colorForeground">@color/grey_600</item>
+
+        <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/grey_200</item>
-        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 
@@ -46,7 +50,7 @@
 
     <style name="confirmDialogDark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/blue_A700</item>
-        <item name="android:background">@color/black</item>
+        <item name="android:background">@color/grey_600</item>
         <item name="android:textColor">@color/blue_A700</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/grey_400</item>
