--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,6 +35,10 @@
         <item name="colorAccent">@color/light_green_A700</item>
         <item name="android:colorBackground">@color/grey_600</item>
         <item name="android:colorForeground">@color/grey_600</item>
+        <item name="android:itemBackground">@color/grey_600</item>
+
+        <item name="android:windowBackground">@color/black</item>
+
 
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
@@ -49,9 +53,9 @@
     </style>
 
     <style name="confirmDialogDark" parent="Theme.AppCompat.Dialog.Alert">
-        <item name="colorAccent">@color/blue_A700</item>
+        <item name="colorAccent">@color/light_green_A700</item>
         <item name="android:background">@color/grey_600</item>
-        <item name="android:textColor">@color/blue_A700</item>
+        <item name="android:textColor">@color/light_green_A700</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/grey_400</item>
     </style>
