--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="light_blue_A700">#0091EA</color>
     <color name="blue_A700">#2962FF</color>
     <color name="grey_600">#757575</color>
+    <color name="grey_800">#424242</color>
     <color name="grey_200">#EEEEEE</color>
     <color name="grey_400">#BDBDBD</color>
     <color name="light_green_A700">#64DD17</color>
