--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,21 +29,22 @@
         <item name="android:foreground">@color/black</item>
     </style>
 
-    <style name="AppThemeDark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="AppThemeDark" parent="ThemeOverlay.AppCompat.Dark">
         <item name="colorPrimary">@color/grey_600</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/light_green_A700</item>
-        <item name="android:colorBackground">@color/grey_600</item>
-        <item name="android:colorForeground">@color/grey_600</item>
+        <item name="android:colorBackground">@color/grey_800</item>
+
         <item name="android:itemBackground">@color/grey_600</item>
-
-        <item name="android:windowBackground">@color/black</item>
-
+        <item name="android:background">@color/grey_800</item>
 
         <item name="android:textColor">@color/white</item>
+        <item name="android:textColorAlertDialogListItem">@color/white</item>
+
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@color/grey_200</item>
 
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 
@@ -51,6 +52,35 @@
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
     </style>
+
+    <style name="AppThemeSettingsDark" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/grey_600</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/light_green_A700</item>
+        <item name="android:colorBackground">@color/grey_800</item>
+
+        <item name="android:itemBackground">@color/grey_600</item>
+
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorAlertDialogListItem">@color/white</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/grey_200</item>
+
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
+        <item name="android:windowAllowReturnTransitionOverlap">true</item>
+    </style>
+
+
+
+
+
+
 
     <style name="confirmDialogDark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/light_green_A700</item>
