--- a/app/src/main/res/layout/nav_header_base.xml
+++ b/app/src/main/res/layout/nav_header_base.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/nav_container"
     android:layout_width="match_parent"
     android:layout_height="@dimen/base_navigation_bar_height"
     android:background="@drawable/side_nav_bar"
@@ -12,10 +13,10 @@
     android:paddingTop="@dimen/base_navigation_padding_vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:orientation="horizontal"
         android:paddingTop="@dimen/base_navigation_padding_vertical">
 
@@ -23,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
             android:contentDescription="@string/image_description_app"
             app:srcCompat="@mipmap/ic_launcher_round" />
 
@@ -32,21 +34,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:background="@android:color/transparent"
             android:fontFamily="@font/abel"
             android:paddingBottom="@dimen/base_navigation_padding_vertical"
             android:paddingEnd="@dimen/base_navigation_padding_horizontal"
             android:paddingStart="@dimen/base_navigation_padding_horizontal"
             android:paddingTop="@dimen/base_navigation_padding_vertical"
             android:text="@string/text_nav_anonymous"
-            android:textStyle="bold|italic"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="bold|italic" />
 
     </LinearLayout>
-
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/pacifico"
         android:paddingTop="@dimen/base_navigation_padding_vertical"
         android:text="@string/app_name"
@@ -55,6 +58,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:fontFamily="@font/abel"
         android:text="@string/url_app"
         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
