--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,7 @@
         <item name="android:colorBackground">@color/grey_800</item>
 
         <item name="android:itemBackground">@color/grey_600</item>
+        <item name="android:background">@color/grey_800</item>
 
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorAlertDialogListItem">@color/white</item>
@@ -75,12 +76,6 @@
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
     </style>
-
-
-
-
-
-
 
     <style name="confirmDialogDark" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/light_green_A700</item>
