--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,10 +57,10 @@
         <item name="colorPrimary">@color/grey_600</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/light_green_A700</item>
-        <item name="android:colorBackground">@color/grey_800</item>
+        <item name="android:colorBackground">@color/colorBackgroundDark</item>
 
         <item name="android:itemBackground">@color/grey_600</item>
-        <item name="android:background">@color/grey_800</item>
+        <item name="android:background">@color/colorBackgroundDark</item>
 
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorAlertDialogListItem">@color/white</item>
