--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -100,7 +100,24 @@
                         android:textColor="?android:attr/textColorSecondary"
                         android:visibility="visible" />
 
+                    <TextView
+                        android:id="@+id/tv_replies"
+                        style="@style/TextAppearance.AppCompat.Small"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="start|center_vertical"
+                        android:paddingBottom="@dimen/list_padding_vertical_author"
+                        android:paddingEnd="@dimen/list_padding_horizontal_author"
+                        android:paddingStart="@dimen/list_padding_horizontal_author"
+                        android:textColor="?android:attr/textColorLink"
+                        android:visibility="gone" />
+
+
                 </LinearLayout>
+
+
+
             </LinearLayout>
         </LinearLayout>
 
