--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -18,8 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp">
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp">
 
             <View
                 android:id="@+id/view_depth"
@@ -112,6 +112,11 @@
                         android:paddingStart="@dimen/list_padding_horizontal_author"
                         android:textColor="?android:attr/textColorLink"
                         android:visibility="gone" />
+
+                    <FrameLayout
+                        android:id="@+id/fragment_subreddit_more_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
 
                 </LinearLayout>
