--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,11 +22,11 @@
 
     <style name="confirmDialogLight" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/blue_A700</item>
-        <item name="android:background">@color/white</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textColorPrimary">@color/black</item>
-        <item name="android:textColorSecondary">@color/black</item>
-        <item name="android:foreground">@color/black</item>
+        <item name="android:background">@color/cardview_light_background</item>
+        <item name="android:textColor">@color/blue_A700</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+
     </style>
 
     <style name="AppThemeDark" parent="ThemeOverlay.AppCompat.Dark">
