--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -115,6 +115,10 @@
 
                 </LinearLayout>
 
+                <FrameLayout
+                    android:id="@+id/fragment_subreddit_more_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
 
             </LinearLayout>
