--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -115,13 +115,16 @@
 
                 </LinearLayout>
 
-                <FrameLayout
-                    android:id="@+id/fragment_subreddit_more_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/fragment_subreddit_more_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:orientation="vertical" />
+
+
         </LinearLayout>
 
         <include layout="@layout/inc_select_bottom" />
