--- a/app/src/main/res/menu/activity_base_drawer_main.xml
+++ b/app/src/main/res/menu/activity_base_drawer_main.xml
@@ -27,6 +27,12 @@
         <item
             android:id="@+id/nav_mode_subscriptions"
             android:title="@string/title_menu_managesubs" />
+
+        <item
+            android:id="@+id/nav_mode_preferite"
+            android:title="@string/title_menu_preferite" />
+
+
         <item
             android:id="@+id/nav_mode_refresh"
             android:title="@string/title_menu_mode_refresh" />
