--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -5,7 +5,7 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_all">
         <intent
-            android:action="info.pelleritoudacity.android.rcapstone.shortcut.all"
+            android:action="info.pelleritoudacity.android.rcapstone.menu.shortcut.launcher.all"
             android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
@@ -15,7 +15,7 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_popular">
         <intent
-            android:action="info.pelleritoudacity.android.rcapstone.shortcut.popular"
+            android:action="info.pelleritoudacity.android.rcapstone.menu.shortcut.launcher.popular"
             android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
@@ -23,9 +23,9 @@
 
     <shortcut
         android:enabled="false"
-        android:icon="@drawable/shortcut_search">
+        android:icon="@drawable/shortcut_preferite">
         <intent
-            android:action="info.pelleritoudacity.android.rcapstone.shortcut.search"
+            android:action="info.pelleritoudacity.android.rcapstone.menu.shortcut.launcher.preferite"
             android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
