--- a/app/src/main/res/layout/activity_sub_reddit_full_screen.xml
+++ b/app/src/main/res/layout/activity_sub_reddit_full_screen.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Base.ThemeOverlay.AppCompat.Dark"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <include layout="@layout/inc_player_fullscreen_container" />
-</FrameLayout>
+
+</merge>
