--- a/app/src/main/res/layout/inc_player_container.xml
+++ b/app/src/main/res/layout/inc_player_container.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/id_player_layout"
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:gravity="center_vertical"
-    android:visibility="gone">
+    android:visibility="gone"
+    tools:ignore="MergeRootFrame">
 
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
