--- a/app/src/main/res/layout/inc_player_fullscreen_container.xml
+++ b/app/src/main/res/layout/inc_player_fullscreen_container.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_player_full_layout"
+    style="@style/Base.ThemeOverlay.AppCompat.Dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_protection"
