fix class rest rearrange code and deserialize

--- a/app/src/main/res/menu/activity_base_drawer_main.xml
+++ b/app/src/main/res/menu/activity_base_drawer_main.xml
@@ -29,7 +29,7 @@
             android:title="@string/title_menu_managesubs" />
 
         <item
-            android:id="@+id/nav_mode_preferite"
+            android:id="@+id/nav_mode_favorite"
             android:title="@string/title_menu_favorite" />
 
 
