--- a/app/libs/src/main/res/xml/shortcuts.xml
+++ b/app/libs/src/main/res/xml/shortcuts.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/shortcut_all">
         <intent
             android:action="info.pelleritoudacity.android.rcapstone.shortcut.all"
-            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
+            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
 
@@ -16,7 +16,7 @@
         android:icon="@drawable/shortcut_popular">
         <intent
             android:action="info.pelleritoudacity.android.rcapstone.shortcut.popular"
-            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
+            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
 
@@ -26,7 +26,7 @@
         android:icon="@drawable/shortcut_search">
         <intent
             android:action="info.pelleritoudacity.android.rcapstone.shortcut.search"
-            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
+            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
 
