--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/subreddit_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SubRedditDetailActivity">
+    tools:context=".ui.activity.DetailActivity">
 
     <include layout="@layout/app_bar_layout" />
 
