--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/subreddit_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SubRedditActivity">
+    tools:context=".ui.activity.MainActivity">
 
     <include layout="@layout/app_tab_layout" />
 
