--- a/app/src/main/res/layout/fragment_detail_title.xml
+++ b/app/src/main/res/layout/fragment_detail_title.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/rv_fragment_reddit"
+        android:id="@+id/rv_fragment_detail_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:layoutAnimation="@anim/layout_animation_fall_down"/>
+        android:nestedScrollingEnabled="false"
+        android:scrollbars="none" />
 </FrameLayout>
