--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,9 @@
 
     <dimen name="list_padding_vertical_author">8dp</dimen>
     <dimen name="list_padding_horizontal_author">8dp</dimen>
+    <dimen name="widget_min_width">110dp</dimen>
+    <dimen name="widget_min_height">110dp</dimen>
+    <dimen name="widget_image_size">24dp</dimen>
 
 
 </resources>
