--- a/app/src/main/res/layout/widget_main.xml
+++ b/app/src/main/res/layout/widget_main.xml
@@ -7,18 +7,33 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/widget_title"
-        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-       android:layout_gravity="center"
-        android:contentDescription="@string/widget_home"
         android:minHeight="40dp"
         android:padding="8dp"
-        android:textColor="@color/white" />
+        android:orientation="horizontal">
 
+
+        <TextView
+            android:id="@+id/widget_title"
+            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:contentDescription="@string/widget_home"
+            android:textColor="@color/white" />
+
+        <ImageView
+            android:id="@+id/widget_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/widget_refresh" />
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/widget_listView"
