--- a/app/src/main/res/layout/widget_main.xml
+++ b/app/src/main/res/layout/widget_main.xml
@@ -12,14 +12,14 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="40dp"
-        android:padding="8dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="8dp">
 
 
         <TextView
             android:id="@+id/widget_title"
             style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -27,11 +27,20 @@
             android:textColor="@color/white" />
 
         <ImageView
+            android:id="@+id/widget_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/widget_refresh"
+            android:padding="4dp" />
+
+        <ImageView
             android:id="@+id/widget_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:contentDescription="@string/widget_refresh" />
+            android:contentDescription="@string/widget_refresh"
+            android:padding="4dp" />
 
     </LinearLayout>
 
