--- a/app/src/main/res/layout/activity_option_widget.xml
+++ b/app/src/main/res/layout/activity_option_widget.xml
@@ -9,6 +9,7 @@
         style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/text_option_widget_title"
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:contentDescription="@string/widget_home"
