--- a/app/src/main/res/values-land/integers.xml
+++ b/app/src/main/res/values-land/integers.xml
@@ -11,6 +11,7 @@
     <integer name="icon_size_exit_fullscreen">30</integer>
     <integer name="icon_size_muted">25</integer>
     <integer name="icon_size_volume">25</integer>
+    <integer name="text_radio_widget">20</integer>
 
 
 </resources>
