--- a/app/src/main/res/values-sw600dp-land/integers.xml
+++ b/app/src/main/res/values-sw600dp-land/integers.xml
@@ -13,5 +13,6 @@
     <integer name="icon_size_muted">25</integer>
     <integer name="icon_size_volume">25</integer>
 
+    <integer name="text_radio_widget">20</integer>
 
 </resources>
