--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -16,5 +16,7 @@
     <integer name="icon_size_muted">25</integer>
     <integer name="icon_size_volume">25</integer>
 
+    <integer name="text_radio_widget">20</integer>
+
 
 </resources>
